Add product details endpoints with category info